--- a/Client/src/pages/VendorAccountSetup/AccountSetupA.9.2.css
+++ b/Client/src/pages/VendorAccountSetup/AccountSetupA.9.2.css
@@ -162,11 +162,26 @@ label.input-description-account-setup2-content {
   align-items: center;
   padding: 0px;
   gap: 40px;
+  /* Generate Hashtags */
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+
+  color: #0e0e0e;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 
   position: absolute;
   width: 314px;
   height: 64px;
-  left: 1036px;
+  left: 1004px;
   top: 657px;
 }
 
@@ -180,7 +195,9 @@ label.input-description-account-setup2-content {
   align-items: center;
   padding: 20px;
   gap: 10px;
-
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
   width: 199px;
   height: 64px;
 
